--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap");
 
 body {
+  width: 100vw;
   background-color: black;
   margin: -25px;
   font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
